fixed text overflowing issues with media track

--- a/src/components/media-collection-item/media-collection-item.component.css
+++ b/src/components/media-collection-item/media-collection-item.component.css
@@ -64,6 +64,6 @@
 
 .collection-item-info-title,
 .collection-item-info-subtitle {
-  width: 100%;
+  max-width: 100%;
   overflow: hidden;
 }
